Fixed: Incorrect z-index of button tooltips when using Fluent theme

--- a/themes/fluent.css
+++ b/themes/fluent.css
@@ -397,10 +397,6 @@ x-button[skin="dock"]:focus {
   outline-offset: -2px;
 }
 
-x-button[skin="dock"]:hover {
-  z-index: 2;
-}
-
 /*****************************************************************************************************************/
 
 /**
